--- a/index.html
+++ b/index.html
@@ -26,14 +26,21 @@
         </div>
     </nav>
 
-    <!-- Animated Background Elements -->
-    <div class="bg-circles">
-        <div class="circle circle-1"></div>
-        <div class="circle circle-2"></div>
-        <div class="circle circle-3"></div>
-        <div class="circle circle-4"></div>
-        <div class="circle circle-5"></div>
-        <div class="circle circle-6"></div>
+    <!-- Animated Grid Background -->
+    <div class="grid-background">
+        <div class="grid-container">
+            <div class="grid-orb orb-1"></div>
+            <div class="grid-orb orb-2"></div>
+            <div class="grid-orb orb-3"></div>
+            <div class="grid-orb orb-4"></div>
+            <div class="grid-orb orb-5"></div>
+            <div class="grid-orb orb-6"></div>
+            <div class="grid-orb orb-7"></div>
+            <div class="grid-orb orb-8"></div>
+            <div class="grid-orb orb-9"></div>
+            <div class="grid-orb orb-10"></div>
+        </div>
+        <div class="grid-lines"></div>
     </div>
 
     <!-- Main Content -->
