--- a/index.html
+++ b/index.html
@@ -24,23 +24,16 @@
                 <li><a href="landing.html" class="nav-btn">Back Home</a></li>
             </ul>
         </div>
-    </nav>
+        </nav>
 
-    <!-- Animated Grid Background -->
+    <!-- Background Ellipses -->
     <div class="grid-background">
-        <div class="grid-container">
-            <div class="grid-orb orb-1"></div>
-            <div class="grid-orb orb-2"></div>
-            <div class="grid-orb orb-3"></div>
-            <div class="grid-orb orb-4"></div>
-            <div class="grid-orb orb-5"></div>
-            <div class="grid-orb orb-6"></div>
-            <div class="grid-orb orb-7"></div>
-            <div class="grid-orb orb-8"></div>
-            <div class="grid-orb orb-9"></div>
-            <div class="grid-orb orb-10"></div>
-        </div>
-        <div class="grid-lines"></div>
+        <img src="assets/Ellipse.png" class="ellipse ellipse-1" alt="">
+        <img src="assets/Ellipse.png" class="ellipse ellipse-2" alt="">
+        <img src="assets/Ellipse.png" class="ellipse ellipse-3" alt="">
+        <img src="assets/Ellipse.png" class="ellipse ellipse-4" alt="">
+        <img src="assets/Ellipse.png" class="ellipse ellipse-5" alt="">
+        <img src="assets/Ellipse.png" class="ellipse ellipse-6" alt="">
     </div>
 
     <!-- Main Content -->
