Font stilleri güncellendi ve "Outfit" fontu eklendi. Erişim başlığı metni birleştirildi. HTML ve CSS dosyalarında stil değişiklikleri yapıldı.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIFT - Stop Starting. Start Building.</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -43,8 +43,7 @@
             <p class="subtitle">Join thousands of LIFT users who show up differently every day.</p>
             
             <div class="early-access">
-                <h2 class="access-title">Get early access</h2>
-                <h3 class="access-subtitle">drop your email below.</h3>
+                <h2 class="access-title">Get early access drop your email below.</h2>
                 
                 <form class="email-form">
                     <div class="form-group">
