HTML dosyasında logo metni resimle değiştirildi. CSS dosyasında navigasyon bağlantılarının renk ve font stilleri güncellendi, butonun kenar yuvarlama değeri değiştirildi.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>Lift</h2>
+                <img src="assets/Logo-Lift.png" alt="Lift Logo">
             </div>
             <ul class="nav-links">
                 <li><a href="#" class="nav-link">Homepage</a></li>
