HTML dosyasında logo metni resimle değiştirildi ve CSS dosyasında font ailesi "Outfit" olarak güncellendi. Ayrıca, landing-page sınıfı için font stilleri eklendi.

--- a/landing.html
+++ b/landing.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIFT - Lead Yourself. Then Influence What Matters.</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body class="landing-page">
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>Lift</h2>
+                <img src="assets/Logo-Lift.png" alt="Lift Logo">
             </div>
             <ul class="nav-links">
                 <li><a href="#hero" class="nav-link">Homepage</a></li>
