HTML dosyasında alt başlık yapısı güncellendi ve CSS dosyasında stil değişiklikleri yapıldı. Body için üst boşluk azaltıldı, başlık ve açıklama stilleri güncellendi, butonun padding ve kenar yuvarlama değerleri değiştirildi.

--- a/landing.html
+++ b/landing.html
@@ -35,7 +35,9 @@
                     Build habits, a mindset, and a lifestyle that actually stick — with the LIFT Framework.
                 </p>
                 <p class="hero-subtitle">
-                    Start small. Go deep. Show up real.<br>
+                    Start small. Go deep. Show up real.
+                </p>
+                <p class="hero-subtitle-regular">
                     Leadership Intelligence to Flow and Thrive.
                 </p>
                 <button class="cta-btn">Download Now</button>
