HTML dosyasında görsel düzenlemeleri içeren yeni bir yapı eklendi. CSS dosyasında ise görsel ızgara yapısı ve stil güncellemeleri yapıldı, yeni sınıflar tanımlandı.

--- a/landing.html
+++ b/landing.html
@@ -44,12 +44,21 @@
             </div>
             <div class="hero-images">
                 <div class="image-grid">
-                    <div class="image-placeholder"></div>
-                    <div class="image-placeholder"></div>
-                    <div class="image-placeholder"></div>
-                    <div class="image-placeholder"></div>
-                    <div class="image-placeholder"></div>
-                    <div class="image-placeholder"></div>
+                    <div class="image-row top-row">
+                        <img src="assets/hero4.png" alt="Hero Image" class="hero-img">
+                        <img src="assets/hero5.png" alt="Hero Image" class="hero-img">
+                    </div>
+                    <div class="image-row middle-row">
+                        <div class="empty-space"></div>
+                        <div class="green-dot"></div>
+                        <img src="assets/hero6.png" alt="Hero Image" class="hero-img">
+                        <img src="assets/hero7.png" alt="Hero Image" class="hero-img">
+                    </div>
+                    <div class="image-row bottom-row">
+                        <img src="assets/hero8.png" alt="Hero Image" class="hero-img">
+                        <img src="assets/hero9.png" alt="Hero Image" class="hero-img">
+                        <img src="assets/hero3.png" alt="Hero Image" class="hero-img">
+                    </div>
                 </div>
             </div>
         </div>
