HTML dosyasına yeni bir kare çerçeve yapısı eklendi. CSS dosyasında kare çerçeve ve küçük yeşil çerçeve için stiller tanımlandı.

--- a/landing.html
+++ b/landing.html
@@ -55,6 +55,10 @@
                         </div>
                     </div>
                     <div class="image-row middle-row">
+                        <div class="square-frame-container">
+                            <div class="square-frame"></div>
+                            <div class="green-frame-tiny"></div>
+                        </div>
                         <div class="empty-space"></div>
                         <div class="green-dot"></div>
                         <div class="hero-img-container">
