HTML dosyasında görselin yerini değiştirilerek yeni bir resim eklendi. CSS dosyasında görsel için yeni stil tanımlamaları yapıldı ve boyutlandırma ayarları güncellendi.

--- a/landing.html
+++ b/landing.html
@@ -94,7 +94,7 @@
         <div class="container">
             <div class="what-is-lift-content">
                 <div class="what-is-lift-image">
-                    <div class="image-placeholder large"></div>
+                    <img src="assets/what.png" alt="What is LIFT" class="what-image">
                 </div>
                 <div class="what-is-lift-text">
                     <h2>WHAT IS LIFT?</h2>
