HTML dosyasında başlangıç açıklamasına vurgulu metin eklendi. CSS dosyasında başlangıç bölümündeki padding değerleri ve metin renkleri güncellendi, yeni bir vurgulu metin sınıfı tanımlandı.

--- a/landing.html
+++ b/landing.html
@@ -122,7 +122,7 @@
                 That payment is your signal to yourself: I'm doing this.
             </p>
             <p class="start-description">
-                And when you take that first step, we reward your commitment: Month 2 and 3 are free.
+                And when you take that first step, we reward your commitment: <span class="highlight-text">Month 2 and 3 are free.</span>
             </p>
         </div>
     </section>
