HTML dosyasında fiyatlandırma kartları güncellendi; başlıklar, açıklamalar ve özellikler değiştirildi. CSS dosyasında fiyatlandırma kartlarının arka planı ve kenar stilleri düzenlendi, metin renkleri siyah olarak ayarlandı.

--- a/landing.html
+++ b/landing.html
@@ -131,39 +131,37 @@
     <section id="pricing" class="pricing-section">
         <div class="container">
             <div class="pricing-grid">
-                <!-- LIFT Starter -->
+                <!-- LIFT∞ (Annual Subscription) -->
                 <div class="pricing-card">
-                    <h3>LIFT Starter</h3>
-                    <p class="pricing-subtitle">LIFT to (Annual Subscription)</p>
+                    <h3>🌱 LIFT∞ (Annual Subscription)</h3>
                     <ul class="pricing-features">
-                        <li>Monthly Theme: seasonal insights</li>
-                        <li>Daily Coaching: structured frameworks</li>
-                        <li>From plans to flow in flow</li>
+                        <li>Monthly themes, seasonal targets</li>
+                        <li>Daily messages tailored to the moment</li>
+                        <li>From detox to focus to flow</li>
                     </ul>
                     <button class="pricing-btn">Unlock Full Lifestyle Access</button>
                 </div>
 
-                <!-- LIFT Monthly -->
+                <!-- LIFT Starter -->
                 <div class="pricing-card">
-                    <h3>LIFT Monthly</h3>
-                    <p class="pricing-subtitle">Go-day performance leadership</p>
+                    <h3>LIFT Starter</h3>
                     <ul class="pricing-features">
+                        <li>90-day guided personal leadership system</li>
                         <li>Daily micro-actions</li>
-                        <li>Personal tracking: rhythm over urgency</li>
-                        <li>Weekly tracking</li>
-                        <li>Support live action/breakthrough call</li>
+                        <li>Mindset rewiring, rhythm creation, identity building</li>
+                        <li>Support for real transformation—not just motivation</li>
                     </ul>
-                    <button class="pricing-btn secondary">Try Free + Start Here →</button>
+                    <button class="pricing-btn ready-btn">I'm Ready - Start Now ></button>
                 </div>
 
                 <!-- LIFT Business -->
                 <div class="pricing-card featured">
-                    <h3>LIFT Business (Course)</h3>
+                    <h3>🏢 LIFT Business (Course)</h3>
                     <ul class="pricing-features">
-                        <li>Must have team to build Framework</li>
-                        <li>Full-time performance, motivation</li>
+                        <li>Teach your team to lead themselves</li>
+                        <li>Build culture, performance, motivation</li>
                     </ul>
-                    <button class="pricing-btn">Coming Soon</button>
+                    <button class="pricing-btn">Coming soon</button>
                 </div>
             </div>
         </div>
