HTML dosyasında referanslar bölümü güncellendi; yeni bir içerik yapısı eklendi ve görsellerin yerleri değiştirildi. CSS dosyasında stil güncellemeleri yapılarak metin renkleri ve düzenlemeleri iyileştirildi.

--- a/landing.html
+++ b/landing.html
@@ -171,20 +171,22 @@
     <section id="testimonials" class="testimonials-section">
         <div class="container">
             <h2>REAL TALK<br>TESTIMONIALS</h2>
-            <div class="testimonials-grid">
-                <div class="testimonial-card">
-                    <div class="testimonial-avatar"></div>
+            <div class="testimonials-container">
+                <div class="testimonial-content">
+                    <p>"Before LIFT, I was constantly stuck in my head—overthinking every little thing and going in circles without moving forward. LIFT helped me break that cycle. Now, I simply show up for myself every single day, with calm and clarity. No more mental noise. No mental drama."</p>
+                    <p class="testimonial-author">— Mila, Phase 2</p>
                 </div>
-                <div class="testimonial-card">
-                    <div class="testimonial-avatar"></div>
+                <div class="testimonials-grid">
+                    <div class="testimonial-card">
+                        <img src="assets/test1.png" alt="Testimonial 1" class="testimonial-img">
+                    </div>
+                    <div class="testimonial-card">
+                        <img src="assets/test2.png" alt="Testimonial 2" class="testimonial-img">
+                    </div>
+                    <div class="testimonial-card">
+                        <img src="assets/test3.png" alt="Testimonial 3" class="testimonial-img">
+                    </div>
                 </div>
-                <div class="testimonial-card">
-                    <div class="testimonial-avatar"></div>
-                </div>
-            </div>
-            <div class="testimonial-content">
-                <p>"Before LIFT, I was constantly stuck in my head—overthinking every little thing and going in circles without moving forward. LIFT helped me break that cycle. Now, I simply show up for myself every single day, with calm and clarity. No more mental noise. No mental drama."</p>
-                <p class="testimonial-author">— Mila, Phase 2</p>
             </div>
         </div>
     </section>
