HTML dosyasında referanslar bölümündeki tanıtım kartlarına etkileşim eklendi; tıklama ile aktif kart değişimi sağlandı. CSS dosyasında tanıtım kartlarının boyutları ve geçiş efektleri güncellendi.

--- a/landing.html
+++ b/landing.html
@@ -180,7 +180,7 @@
                     <div class="testimonial-card">
                         <img src="assets/test1.png" alt="Testimonial 1" class="testimonial-img">
                     </div>
-                    <div class="testimonial-card">
+                    <div class="testimonial-card active">
                         <img src="assets/test2.png" alt="Testimonial 2" class="testimonial-img">
                     </div>
                     <div class="testimonial-card">
