HTML dosyasında tanıtım kartlarına yeni içerikler eklendi ve etkileşim güncellendi. JavaScript dosyasında tanıtım verileri tanımlanarak, tıklama ile içerik güncellemeleri sağlandı.

--- a/landing.html
+++ b/landing.html
@@ -177,14 +177,14 @@
                     <p class="testimonial-author">— Mila, Phase 2</p>
                 </div>
                 <div class="testimonials-grid">
-                    <div class="testimonial-card">
+                    <div class="testimonial-card" data-testimonial="emily">
                         <img src="assets/test1.png" alt="Testimonial 1" class="testimonial-img">
                     </div>
-                    <div class="testimonial-card">
-                        <img src="assets/test2.png" alt="Testimonial 2" class="testimonial-img">
-                    </div>
-                    <div class="testimonial-card active">
+                    <div class="testimonial-card active" data-testimonial="mila">
                         <img src="assets/test3.png" alt="Testimonial 3" class="testimonial-img">
+                    </div>
+                    <div class="testimonial-card" data-testimonial="james">
+                        <img src="assets/test2.png" alt="Testimonial 2" class="testimonial-img">
                     </div>
                 </div>
             </div>
