HTML dosyasında abonelik bölümündeki bağlantı ve içerik güncellemeleri yapıldı. CSS dosyasında görsel boyutlandırmaları, metin renkleri ve stil düzenlemeleri gerçekleştirildi. Ayrıca, alt kısımda logo görseli eklendi ve telif hakkı bilgisi güncellendi.

--- a/landing.html
+++ b/landing.html
@@ -17,7 +17,7 @@
             <ul class="nav-links">
                 <li><a href="#hero" class="nav-link">Homepage</a></li>
                 <li><a href="#what-is-lift" class="nav-link">What is LIFT?</a></li>
-                <li><a href="#pricing" class="nav-link">Subscriptions</a></li>
+                <li><a href="#subscription" class="nav-link">Subscriptions</a></li>
                 <li><a href="#testimonials" class="nav-link">Testimonials</a></li>
                 <li><a href="#framework" class="nav-link">Framework</a></li>
                 <li><a href="#cta" class="nav-link">Start</a></li>
@@ -112,8 +112,8 @@
     </section>
 
     <!-- Start with LIFT Section -->
-    <section class="start-section">
-        <div class="container">
+            <section class="start-section" id="subscription">
+            <div class="container">
             <h2 class="start-title">🚀 Start with LIFT</h2>
             <p class="start-description">
                 When you subscribe, you pay for the first month only — because being ready is not a feeling, it's a decision.
@@ -196,7 +196,7 @@
         <div class="container">
             <div class="framework-content">
                 <div class="framework-image">
-                    <div class="image-placeholder large"></div>
+                    <img src="assets/framework.png" alt="The Framework" class="framework-img">
                 </div>
                 <div class="framework-text">
                     <h2>THE FRAMEWORK</h2>
@@ -215,7 +215,7 @@
             <div class="cta-overlay">
                 <h2>Stop starting. Start building.</h2>
                 <p>Join thousands of LIFT users who show up differently every day.</p>
-                <button class="cta-btn">Subscribe Today & Get Free Month 2 & 3</button>
+                <button class="cta-btn">Start Now – First Step Paid, Two Months Free →</button>
             </div>
         </div>
     </section>
@@ -225,7 +225,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h3>Lift</h3>
+                    <img src="assets/Logo-Lift.png" alt="Lift Logo">
                 </div>
                 <div class="footer-links">
                     <a href="#" class="footer-link">Homepage</a>
@@ -235,7 +235,7 @@
                     <a href="#" class="footer-link">Framework</a>
                     <a href="#" class="footer-link">Start</a>
                 </div>
-                <p class="footer-copyright">© 2024 OneUp. All rights reserved.</p>
+                <p class="footer-copyright">© 2025 Lift. All rights reserved.</p>
             </div>
         </div>
     </footer>
