HTML dosyasına mobil navigasyon menüsü ve hamburger simgesi eklendi. JavaScript dosyasında mobil menü işlevselliği sağlandı; menü açma, kapama ve dışarı tıklama ile kapama özellikleri eklendi. CSS dosyasında mobil navigasyon ve hamburger menü için stil düzenlemeleri yapıldı.

--- a/landing.html
+++ b/landing.html
@@ -23,7 +23,25 @@
                 <li><a href="#cta" class="nav-link">Start</a></li>
                 <li><a href="index.html" class="nav-btn">Coming Soon</a></li>
             </ul>
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
+    </nav>
+
+    <!-- Mobile Navigation -->
+    <nav class="mobile-nav" id="mobile-nav">
+        <ul>
+            <li><a href="#hero">Homepage</a></li>
+            <li><a href="#what-is-lift">What is LIFT?</a></li>
+            <li><a href="#subscription">Subscriptions</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#framework">Framework</a></li>
+            <li><a href="#cta">Start</a></li>
+            <li><a href="index.html">Coming Soon</a></li>
+        </ul>
     </nav>
 
     <!-- Hero Section -->
@@ -211,11 +229,13 @@
 
     <!-- Final CTA Section -->
     <section id="cta" class="final-cta-section">
-        <div class="cta-container">
-            <div class="cta-overlay">
-                <h2>Stop starting. Start building.</h2>
-                <p>Join thousands of LIFT users who show up differently every day.</p>
-                <button class="cta-btn">Start Now – First Step Paid, Two Months Free →</button>
+        <div class="container">
+            <div class="cta-container">
+                <div class="cta-overlay">
+                    <h2>Stop starting. Start building.</h2>
+                    <p>Join thousands of LIFT users who show up differently every day.</p>
+                    <button class="cta-btn">Start Now – First Step Paid, Two Months Free →</button>
+                </div>
             </div>
         </div>
     </section>
