HTML dosyasına mobil navigasyon menüsü ve hamburger simgesi eklendi. CSS dosyasında form stilleri, buton boyutları ve metin düzenlemeleri yapıldı; mobil uyumluluk için stil güncellemeleri gerçekleştirildi.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,26 @@
                 <li><a href="#" class="nav-link">Start</a></li>
                 <li><a href="landing.html" class="nav-btn">Back Home</a></li>
             </ul>
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
-        </nav>
+    </nav>
+
+    <!-- Mobile Navigation -->
+    <nav class="mobile-nav" id="mobile-nav">
+        <ul>
+            <li><a href="#">Homepage</a></li>
+            <li><a href="#">What is LIFT?</a></li>
+            <li><a href="#">Subscriptions</a></li>
+            <li><a href="#">Testimonials</a></li>
+            <li><a href="#">Framework</a></li>
+            <li><a href="#">Start</a></li>
+            <li><a href="landing.html">Back Home</a></li>
+        </ul>
+    </nav>
 
     <!-- Background Ellipses -->
     <div class="grid-background">
