HTML dosyasında mobil navigasyon menüsüne hamburger simgesi eklendi ve "Back Home" ile "Coming Soon" butonları güncellendi. CSS dosyasında hamburger menü ve navigasyon düzenlemeleri yapıldı, elemanların sıralamaları ve stilleri iyileştirildi.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <div class="nav-logo">
                 <img src="assets/Logo-Lift.png" alt="Lift Logo">
             </div>
@@ -21,13 +26,8 @@
                 <li><a href="#" class="nav-link">Testimonials</a></li>
                 <li><a href="#" class="nav-link">Framework</a></li>
                 <li><a href="#" class="nav-link">Start</a></li>
-                <li><a href="landing.html" class="nav-btn">Back Home</a></li>
             </ul>
-            <div class="hamburger" id="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+            <a href="landing.html" class="nav-btn">Back Home</a>
         </div>
     </nav>
 
