--- a/landing.html
+++ b/landing.html
@@ -11,6 +11,11 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <div class="nav-logo">
                 <img src="assets/Logo-Lift.png" alt="Lift Logo">
             </div>
@@ -21,13 +26,8 @@
                 <li><a href="#testimonials" class="nav-link">Testimonials</a></li>
                 <li><a href="#framework" class="nav-link">Framework</a></li>
                 <li><a href="#cta" class="nav-link">Start</a></li>
-                <li><a href="index.html" class="nav-btn">Coming Soon</a></li>
             </ul>
-            <div class="hamburger" id="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+            <a href="index.html" class="nav-btn">Coming Soon</a>
         </div>
     </nav>
 
